@@ -1,4 +1,4 @@
-$Id: History,v 1.1 2000-02-17 14:49:46 asaim Exp $
+$Id: History,v 1.2 2000-02-22 05:01:42 asaim Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -23,6 +23,10 @@ committal in the CVS repository !
 
 History file for visualization category
 ---------------------------------------
+
+22nd February 2000  Makoto Asai (raytracer-V01-00-01)
+- Change "char*" to "const char*"
+- use g4std/fstream
 
 17th February 2000  Makoto Asai (raytracer-V01-00-00)
 - Primary tag of sub-category
